--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0"
