--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "vite-plugin-pwa": "^0.19.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
